<resources>
    <string name="app_name">sign</string>
    <string name="num">账号</string>
    <string name="pass">密码</string>
    <string name="code">请输入验证码</string>
    <string name="newpass">新密码</string>
    <string name="renewpass">确认密码</string>
    <string name="login">登录</string>
    <string name="getphhoneid">点击获取设备串号</string>
    <string name="register">修改设备信息</string>
    <string name="forgetpass">忘记密码</string>
    <string name="txt_register">用户注册</string>
    <string name="et_register_num">账号</string>
    <string name="et_register_pass">密码</string>
    <string name="et_register_repass">确认密码</string>
    <string name="et_register_newpass">新密码</string>
    <string name="phonenum">手机号</string>
    <string name="VerifyCode">获得验证码</string>
    <string name="scan">扫描二维码</string>
    <string name="location">定位</string>
    <string name="ask_for_leave">我要请假</string>
    <string name="tool">工具</string>
    <string name="sendFile">发送文件</string>
    <string name="acceptFile">接受文件</string>
    <string name="createAP">接受文件</string>
    <string name="connectAP">发送文件</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="filetransfer">面对面文件传输</string>
    <string name="updatepass">修改密码</string>
    <string name="photoselect">修改头像</string>
    <string name="regetpass">找回密码</string>
    <string name="record">签到记录</string>
    <string name="scan_text">请将二维码放在方框中</string>
    <string name="courselable">课程:</string>
    <string name="timelable">时间:</string>
    <string name="demo">32位微机原理与接口技术</string>
    <string name="sign">出勤:</string>
    <string name="Thu">周四,7 8节</string>
    <string name="Fri">3</string>
    <string name="absencelabel">缺勤：</string>
    <string name="vacation">请假:</string>
    <string name="takephoto">拍照</string>
    <string name="selectpicture">从相册中选取</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wed">周三</string>
    <string name="thur">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>

</resources>
