<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_title_updatepass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/regetpass"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_forgetpass_phonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:hint="@string/phonenum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <EditText
            android:id="@+id/et_forgetpass_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/code" />


        <Button
            android:id="@+id/bt_getVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/VerifyCode" />
    </LinearLayout>
    <EditText
        android:id="@+id/et_forgetpass_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/num"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/et_forgetpass_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/newpass"
        android:inputType="textPassword"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/et_forgetpass_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/renewpass"
        android:inputType="textPassword"
        android:visibility="gone"/>
    <Button
        android:id="@+id/bt_forgetpass_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/sure"
        android:visibility="gone"/>

</LinearLayout>