<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/home_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="1100dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"

                    android:text="@string/mon" />


                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/tue" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/wed" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/thur" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/fri" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/sat" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:text="@string/sun" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <GridView
                    android:id="@+id/gv_course"
                    android:layout_width="1100dp"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="#FFFFFF"
                    android:columnWidth="150dip"

                    android:gravity="center"

                    />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>