<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_updatepass"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_title_updatepass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/photoselect"

            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button

        android:id="@+id/bt_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_update_item"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/takephoto" />

    <Button
        android:id="@+id/bt_selectPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_update_item"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selectpicture" />
</LinearLayout>