<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tool"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/bt_update_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_set_item"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/updatepass" />

        <Button
            android:id="@+id/bt_file_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_update_pass"
            android:background="@drawable/btn_set_item"
            android:gravity="left|center"
            android:padding="5dp"
            android:text="@string/filetransfer" />

    </RelativeLayout>
</LinearLayout>