<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wifibg"
    android:orientation="vertical"

    tools:context=".activity.WifiActivity">

    <RelativeLayout
        android:id="@+id/r_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/filetransfer"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_wifi_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r_title"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/f2f" />

    <ProgressBar
        android:id="@+id/pb_file"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lv_scanResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_createWifiHot"
        android:layout_below="@+id/r_title"
        android:layout_margin="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_connectWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/connectAP" />

    <Button
        android:id="@+id/bt_createWifiHot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_connectWifi"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/createAP" />

    <FrameLayout
        android:id="@+id/fl_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#b0000000">

            <ProgressBar
                android:id="@+id/pb_progress"
                style="?android:progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>


    </FrameLayout>

</RelativeLayout>
