<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pic_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <chek_ins.com.sign.view.CircleImageView
            android:id="@+id/civ_photo"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"

            android:layout_centerVertical="true"
            android:src="@mipmap/default_photo" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="aa"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_diver_left"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@null" />

            <RelativeLayout
                android:id="@+id/rl_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_diver_left"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg_home"
                android:paddingBottom="30dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/im_sign"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_record" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/im_sign"
                    android:layout_centerHorizontal="true"
                    android:text="@string/record"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_tool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/tv_diver_left"
                android:background="@drawable/btn_bg_home"
                android:paddingBottom="30dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/im_set"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_set" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/im_set"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tool"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_diver_right"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@null" />

            <RelativeLayout
                android:id="@+id/rl_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_diver_right"

                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg_home"
                android:paddingBottom="30dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/im_location"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/im_location"
                    android:layout_centerHorizontal="true"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/tv_diver_right"
                android:background="@drawable/btn_bg_home"
                android:paddingBottom="30dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/im_scan"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_scan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/im_scan"
                    android:layout_centerHorizontal="true"
                    android:text="@string/scan"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_urlshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:visibility="gone" />
</LinearLayout>